--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
     "angular": "^1.7.8",
+    "angular-route": "^1.7.8",
     "bootstrap": "^4.3.1",
     "lite-server": "^2.5.4"
   }
